Chore: update gitignore from react ignores

--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,24 @@ theme/*
 theme/**/node_modules
 theme/**/build
 
+# dependencies
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# misc
+.DS_Store
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 backups
+
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
