Fix: remove static ip from package.json

--- a/theme/react-src/package.json
+++ b/theme/react-src/package.json
@@ -42,5 +42,5 @@
     ]
   },
   "homepage": "/wp-content/themes/theme",
-  "browserLaunchTo": "http:\/\/192.168.1.151"
+  "browserLaunchTo": "http:\/\/localhost"
 }
