Chore: rename dev containers
* Dev containers received the suffix __dev for their names, to
distinguish them from __test containers that will run dist code for
manual user testing

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.dev
-    container_name: ${THEME_NAME}__wp
+    container_name: ${THEME_NAME}__wp__dev
     restart: on-failure
     stdin_open: true
     ports:
@@ -31,7 +31,7 @@ services:
 
   db:
     image: mysql:5.7
-    container_name: ${THEME_NAME}__db
+    container_name: ${THEME_NAME}__db__dev
     restart: on-failure
     environment:
       MYSQL_DATABASE: ${DB_NAME}
